# metadefender-core-openapi3

./: .gitignore  .redocly.yaml  .travis.yml  README.md  index.html  package-lock.json  package.json
config/: config.yaml
openapi/: openapi.yaml
openapi/components/links/: GetAPIKey.yaml  GetBatchId.yaml
openapi/components/parameters/: apikey.yaml  batchId.yaml  rule.yaml  useragent.yaml  userdata.yaml
openapi/components/requestBodies/: adminCleanup.yaml  licenseActivated.yaml  licenseFile.yaml  uploadFile.yaml
openapi/components/responses/: AdminCleanupResponse.yaml  Error400.yaml  Error403.yaml  Error404.yaml  Error405.yaml  Error500.yaml  LicenseInformationResponse.yaml  SkipListResponse.yaml  Success200.yaml  YaraGenerationResponse.yaml  YaraResponse.yaml
openapi/components/schemas/: AVEngineScanReport.yaml  AdminConfigSession.yaml  AdminConfigUpdate.yaml  AdminConfigWebhook.yaml  AnalysisResult.yaml  BatchId.yaml  BatchResponse.yaml  DLPResponse.yaml  DLPRuleMatchResult.yaml  DeepCDRDetails.yaml  FileInformation.yaml  LicenseInformation.yaml  MetascanReport.yaml  NewUserRoleRequest.yaml  NewUserRoleResponse.yaml  ProcessingResultsIndexEnum.yaml  ProcessingResultsStringEnum.yaml  RolePermissionObject.yaml  ScanResultEnum.yaml  SkipList.yaml  UserLogin.yaml  UserRequest.yaml  UserResponse.yaml  VulnerabilityResponse.yaml  YaraReport.yaml  YaraSourcesObject.yaml
openapi/components/securitySchemes/: apikey.yaml
openapi/paths/: admin@config@auditlog.yaml  admin@config@quarantine.yaml  admin@config@sanitize.yaml  admin@config@scanhistory.yaml  admin@config@session.yaml  admin@config@skip.yaml  admin@config@update.yaml  admin@config@webhook.yaml  admin@config@yara@sources.yaml  admin@engine@{engineId}@disable.yaml  admin@engine@{engineId}@enable.yaml  admin@engine@{engineId}@pin.yaml  admin@engine@{engineId}@unpin.yaml  admin@import.yaml  admin@license.yaml  admin@license@activation.yaml  admin@role.yaml  admin@user.yaml  file.yaml  file@batch.yaml  file@batch@{batchId}.yaml  file@batch@{batchId}@certificate.yaml  file@batch@{batchId}@close.yaml  file@converted@{data_id}.yaml  file@rules.yaml  file@webhook@{data_id}.yaml  file@{batchId}@cancel.yaml  file@{data_id}.yaml  file@{data_id}@cancel.yaml  login.yaml  logout.yaml  stat@engines.yaml  stat@nodes.yaml  user@changepassword.yaml  version.yaml  yara@generate.yaml  yara@package.yaml
scripts/: attach-snippets.js  build.js  generate.js  gh-pages-deploy.js  list-sdks.js  utils.js
sdks/c/: CMakeLists.txt  README.md
sdks/c/api/: AdminAPI.c  AdminAPI.h  AnalysisAPI.c  AnalysisAPI.h  AuthAPI.c  AuthAPI.h  BatchAPI.c  BatchAPI.h  ConfigAPI.c  ConfigAPI.h  EnginesAPI.c  EnginesAPI.h  LicenseAPI.c  LicenseAPI.h  StatsAPI.c  StatsAPI.h  YaraAPI.c  YaraAPI.h
sdks/c/model/: _stat_nodes_engines.c  _stat_nodes_engines.h  _stat_nodes_issues.c  _stat_nodes_issues.h  _stat_nodes_statuses.c  _stat_nodes_statuses.h  admin_config_session.c  admin_config_session.h  admin_config_update.c  admin_config_update.h  admin_config_update_disabledupdate.c  admin_config_update_disabledupdate.h  admin_config_webhook.c  admin_config_webhook.h  analysis_result.c  analysis_result.h  analysis_result_process_info.c  analysis_result_process_info.h  analysis_result_process_info_post_processing.c  analysis_result_process_info_post_processing.h  av_engine_scan_report.c  av_engine_scan_report.h  batch_id.c  batch_id.h  batch_response.c  batch_response.h  batch_response_batch_files.c  batch_response_batch_files.h  batch_response_batch_files_files_in_batch.c  batch_response_batch_files_files_in_batch.h  batch_response_batch_files_process_info.c  batch_response_batch_files_process_info.h  batch_response_process_info.c  batch_response_process_info.h  batch_response_scan_results.c  batch_response_scan_results.h  deep_cdr_details.c  deep_cdr_details.h  deep_cdr_details_details.c  deep_cdr_details_details.h  (+122 more)
sdks/c/src/: apiClient.c
sdks/cpp-qt5-client/client/: OAIAVEngineScanReport.cpp  OAIAVEngineScanReport.h  OAIAdminApi.cpp  OAIAdminApi.h  OAIAdminConfigSession.cpp  OAIAdminConfigSession.h  OAIAnalysisApi.cpp  (+182 more)
sdks/csharp/: Org.OpenAPITools.sln  README.md
sdks/go/: README.md  api_admin.go  api_analysis.go  api_auth.go  api_batch.go  api_config.go  api_engines.go  api_license.go  api_stats.go  api_yara.go  client.go  configuration.go  model__stat_nodes_engines.go  model__stat_nodes_issues.go  model__stat_nodes_statuses.go  model_admin_config_session.go  model_admin_config_update.go  model_admin_config_update_disabledupdate.go  model_admin_config_webhook.go  model_analysis_result.go  model_analysis_result_process_info.go  model_analysis_result_process_info_post_processing.go  model_av_engine_scan_report.go  model_batch_id.go  model_batch_response.go  model_batch_response_batch_files.go  model_batch_response_batch_files_files_in_batch.go  model_batch_response_batch_files_process_info.go  model_batch_response_process_info.go  model_batch_response_scan_results.go  model_deep_cdr_details.go  model_deep_cdr_details_details.go  model_dlp_response.go  model_dlp_response_dlp_info.go  model_dlp_response_dlp_info_hits.go  model_dlp_response_dlp_info_hits_ccn.go  model_dlp_response_dlp_info_metadata_removal.go  model_dlp_response_dlp_info_redact.go  model_dlp_response_dlp_info_watermark.go  model_dlp_rule_match_result.go  (+54 more)
sdks/java/: README.md  build.gradle  build.sbt  pom.xml
sdks/java-inflector/: inflector.yaml  pom.xml
sdks/javascript/: README.md  package.json
sdks/jaxrs-cxf/: pom.xml
sdks/jaxrs-jersey/: README.md  pom.xml
sdks/jmeter/: AdminApi.csv  AdminApi.jmx  AnalysisApi.csv  AnalysisApi.jmx  AuthApi.csv  AuthApi.jmx  BatchApi.csv  BatchApi.jmx  ConfigApi.csv  ConfigApi.jmx  EnginesApi.csv  EnginesApi.jmx  LicenseApi.csv  LicenseApi.jmx  StatsApi.csv  StatsApi.jmx  YaraApi.csv  YaraApi.jmx
sdks/nodejs-express-server/: package.json
sdks/perl/: README.md
sdks/php/: README.md  composer.json
sdks/powershell/: Build.ps1  README.md
sdks/python/: README.md  setup.py
sdks/python-flask/: setup.py
sdks/ruby/: README.md  openapi_client.gemspec
(+2404 files in other folders)
